@@ -3,14 +3,14 @@ wrappedso_SONAME = @libseaudit_pyswig_soname@
 wrappedsodir = $(pkgpyexecdir)
 
 wrappedpy_DATA = seaudit.py
-wrappedpydir = $(pkgpythondir)
+wrappedpydir = $(pkgpyexecdir)
 
 dist_noinst_DATA = $(srcdir)/../seaudit.i
 BUILT_SOURCES = seaudit_wrap.c
 
 AM_CFLAGS = @DEBUGCFLAGS@ @WARNCFLAGS@ @PROFILECFLAGS@ @SELINUX_CFLAGS@ \
 	@QPOL_CFLAGS@ @APOL_CFLAGS@ -I$(top_builddir) -fpic \
-	-I$(top_srcdir)/libseaudit/include -D__attribute__\(x\)=''
+	-I$(top_srcdir)/libseaudit/include
 AM_LDFLAGS = @DEBUGLDFLAGS@ @WARNLDFLAGS@ @PROFILELDFLAGS@ \
 	@APOL_LIB_FLAG@ @QPOL_LIB_FLAG@ @SEAUDIT_LIB_FLAG@ @XML_LIBS@
 DEPENDENCIES = $(top_builddir)/libqpol/src/libqpol.so \
